--- a/docs/style.css
+++ b/docs/style.css
@@ -66,19 +66,24 @@ h2 {
 h3 {
 	font-size: 36px;
 	line-height: 46px;
-	font-weight: 400;
+	font-weight: 700;
+    color: var(--secondary-color);
 }
 
 h4 {
-	font-size: 18px;
+	font-size: 12px;
 	line-height: 24px;
-	font-weight: 800;
+	font-weight: 400;
+    letter-spacing: 0.2em;
+    color: var(--secondary-color);
+    text-transform: uppercase;
 }
 
 p {
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 24px;
+    color: var(--secondary-color);
 }
 
 /* TEXT OVER */
@@ -102,16 +107,24 @@ p {
 	align-items: center;
 	width: 100%;
 	height: 40px;
-	padding: 0 15px 0 10px;
+	padding: 0 10px;
 	border-bottom: 1px solid var(--secondary-color);
 	z-index: 99;
 	background-color: var(--secondary-color);
 }
 
 .main {
-	max-width: 1200px;
+	max-width: 1280px;
 	margin: 0 auto;
 	padding-top: 60px;
+    margin: 0 auto;
+}
+
+.section-books {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 100px 20px;
+    margin: 60px auto;
 }
 
 .book-card {
@@ -120,12 +133,16 @@ p {
     border: 1px solid var(--secondary-color);
 	color: var(--primary-color);
 	padding: 40px;
+    min-height: 435px;
+    max-width: 450px;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .book-number {
 	position: absolute;
-	top: -20px;
-	left: -20px;
+	top: 0px;
+	right: 0px;
 	width: 40px;
 	height: 40px;
 	background-color: var(--primary-color);
@@ -133,8 +150,7 @@ p {
 	font-size: 24px;
 	line-height: 40px;
 	text-align: center;
-	border-radius: 20px;
-	border: 2px solid var(--secondary-color);
+    font-weight: 700;
 }
 
 .book-info {
@@ -143,33 +159,19 @@ p {
 	bottom: 50px;
 }
 
-.divider {
-	width: 100%;
-	margin-bottom: 10px;
-	border-top: 2px solid var(--primary-color);
-}
-
 .button-details {
 	position: absolute;
-	text-align: center;
-	right: -10px;
-	bottom: -10px;
-	width: 200px;
-	height: 50px;
+	text-align: left;
+	left: 0px;
+	bottom: -20px;
+	width: 100%;
+	height: 22px;
 	color: var(--secondary-color);
 	background-color: var(--primary-color);
-	border: 2px solid var(--secondary-color);
 }
 
 .button-details:hover {
 	position: absolute;
-	right: -10px;
-	bottom: -10px;
-	width: 200px;
-	height: 50px;
-	color: var(--primary-color);
-	background-color: var(--secondary-color);
-	border: 2px solid var(--primary-color);
 }
 
 .button-text {
@@ -180,12 +182,12 @@ p {
 
 .button-icon {
 	position: absolute;
-	right: 5px;
-	font-size: 36px;
-	line-height: 50px;
+	right: 0px;
+	font-size: 18px;
+	line-height: 18px;
 }
 
-@media only screen and (min-width: 940px) {
+/* @media only screen and (min-width: 940px) {
     .section-books {
 		display: flex;
 		flex-wrap: wrap;
@@ -196,7 +198,6 @@ p {
 
 	.book-card {
 		width: 400px;
-		min-height: 250px;
 	}
 }
 
@@ -211,8 +212,7 @@ p {
 	.book-card {
 		margin: 0 auto;
 		width: 400px;
-		min-height: 250px;
-	}
+    }
 }
 
 @media only screen and (max-width: 440px) {
@@ -230,6 +230,5 @@ p {
 	.book-card {
 		margin: 0 auto;
 		width: 100%;
-		min-height: 250px;
 	}
-}
+} */
