--- a/docs/style.css
+++ b/docs/style.css
@@ -65,9 +65,10 @@ h2 {
 
 h3 {
 	font-size: 36px;
-	line-height: 46px;
+	line-height: 44px;
 	font-weight: 700;
     color: var(--secondary-color);
+    padding-bottom: 20px;
 }
 
 h4 {
@@ -77,13 +78,15 @@ h4 {
     letter-spacing: 0.2em;
     color: var(--secondary-color);
     text-transform: uppercase;
+    padding-bottom: 10px;
 }
 
 p {
 	font-weight: 400;
-	font-size: 18px;
-	line-height: 24px;
+	font-size: 16px;
+	line-height: 22px;
     color: var(--secondary-color);
+    font-family: 'Overpass', sans-serif;
 }
 
 /* TEXT OVER */
@@ -116,31 +119,37 @@ p {
 .main {
 	max-width: 1280px;
 	margin: 0 auto;
-	padding-top: 60px;
-    margin: 0 auto;
+	/* padding-top: 60px; */
 }
 
 .section-books {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 100px 20px;
-    margin: 60px auto;
+    margin: 120px auto;
 }
 
 .book-card {
-	position: relative;
-	background-color: var(--primary-color);
-    border: 1px solid var(--secondary-color);
-	color: var(--primary-color);
-	padding: 40px;
-    min-height: 435px;
+    
+    /* color: var(--primary-color); */
     max-width: 450px;
-    margin: 0 auto;
-    width: 100%;
+    min-width: 350px;
 }
 
+.book-card-bordered {
+    position: relative;
+	background-color: var(--primary-color);
+    border: 1px solid var(--secondary-color);
+    min-height: 435px;
+    max-width: 450px;
+    padding: 40px;
+    margin: 0 auto;
+}
+
+
 .book-number {
-	position: absolute;
+	/* position: absolute;
 	top: 0px;
 	right: 0px;
 	width: 40px;
@@ -150,24 +159,17 @@ p {
 	font-size: 24px;
 	line-height: 40px;
 	text-align: center;
-    font-weight: 700;
+    font-weight: 700; */
 }
 
 .book-info {
 	width: calc(100% - 80px);
 	position: absolute;
-	bottom: 50px;
+	top: 40px;
 }
 
 .button-details {
-	position: absolute;
-	text-align: left;
-	left: 0px;
-	bottom: -20px;
-	width: 100%;
-	height: 22px;
-	color: var(--secondary-color);
-	background-color: var(--primary-color);
+	position: relative;
 }
 
 .button-details:hover {
@@ -182,53 +184,5 @@ p {
 
 .button-icon {
 	position: absolute;
-	right: 0px;
-	font-size: 18px;
-	line-height: 18px;
+    right: 0;
 }
-
-/* @media only screen and (min-width: 940px) {
-    .section-books {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		gap: 60px;
-		margin: 60px auto;
-	}
-
-	.book-card {
-		width: 400px;
-	}
-}
-
-@media only screen and (max-width: 939px) {
-	.section-books {
-		display: flex;
-		flex-direction: column;
-		gap: 60px;
-		margin: 60px auto;
-	}
-
-	.book-card {
-		margin: 0 auto;
-		width: 400px;
-    }
-}
-
-@media only screen and (max-width: 440px) {
-	.main {
-		margin: 0 40px;
-	}
-
-	.section-books {
-		display: flex;
-		flex-direction: column;
-		gap: 60px;
-		margin: 60px auto;
-	}
-
-	.book-card {
-		margin: 0 auto;
-		width: 100%;
-	}
-} */
