--- a/docs/style.css
+++ b/docs/style.css
@@ -149,7 +149,7 @@ p {
 
 
 .book-number {
-	/* position: absolute;
+	position: absolute;
 	top: 0px;
 	right: 0px;
 	width: 40px;
@@ -159,7 +159,7 @@ p {
 	font-size: 24px;
 	line-height: 40px;
 	text-align: center;
-    font-weight: 700; */
+    font-weight: 700; 
 }
 
 .book-info {
