--- a/docs/style.css
+++ b/docs/style.css
@@ -68,6 +68,7 @@ h3 {
 	line-height: 44px;
 	font-weight: 700;
     color: var(--secondary-color);
+    font-family: 'Montserrat', sans-serif;
     padding-bottom: 20px;
 }
 
@@ -119,7 +120,6 @@ p {
 .main {
 	max-width: 1280px;
 	margin: 0 auto;
-	/* padding-top: 60px; */
 }
 
 .section-books {
@@ -131,8 +131,6 @@ p {
 }
 
 .book-card {
-    
-    /* color: var(--primary-color); */
     max-width: 450px;
     min-width: 350px;
 }
@@ -147,7 +145,6 @@ p {
     margin: 0 auto;
 }
 
-
 .book-number {
 	position: absolute;
 	top: 0px;
@@ -156,6 +153,7 @@ p {
 	height: 40px;
 	background-color: var(--primary-color);
 	color: var(--secondary-color);
+    font-family: 'Montserrat', sans-serif;
 	font-size: 24px;
 	line-height: 40px;
 	text-align: center;
@@ -171,11 +169,17 @@ p {
 .button-details {
 	position: relative;
     width: 100%;
+    background-color: var(--primary-color);
+    color: var(--primary-color);
+    cursor: pointer;
 }
 
 .button-details:hover {
-	background-color: var(--secondary-color);
+	position: relative;
+    width: 100%;
+    background-color: var(--secondary-color);
     color: var(--primary-color);
+    cursor: pointer;
 }
 
 .button-text {
@@ -184,9 +188,12 @@ p {
 	font-size: 14px;
 	line-height: 20px;
     text-align: left;
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
 }
 
 .button-icon {
 	position: absolute;
     right: 0;
+    color: var(--secondary-color);
 }
