--- a/docs/style.css
+++ b/docs/style.css
@@ -46,7 +46,7 @@ select {
 
 body {
     font-family: 'Montserrat', sans-serif;
-    font-family: 'Overpass', sans-serif;
+    /* font-family: 'Overpass', sans-serif; */
     color: var(--secondary-color);
 	background: var(--primary-color);
 }
@@ -78,14 +78,15 @@ h4 {
 	font-weight: 400;
     letter-spacing: 0.2em;
     color: var(--secondary-color);
+    font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     padding-bottom: 10px;
 }
 
 p {
-	font-weight: 400;
-	font-size: 16px;
+    font-size: 16px;
 	line-height: 22px;
+	font-weight: 400;
     color: var(--secondary-color);
     font-family: 'Overpass', sans-serif;
 }
@@ -112,14 +113,13 @@ p {
 	width: 100%;
 	height: 40px;
 	padding: 0 10px;
-	border-bottom: 1px solid var(--secondary-color);
-	z-index: 99;
+	z-index: 9;
 	background-color: var(--secondary-color);
 }
 
 .main {
 	max-width: 1280px;
-	margin: 0 auto;
+	margin: 120px auto;
 }
 
 .section-books {
@@ -127,12 +127,12 @@ p {
     flex-wrap: wrap;
     justify-content: center;
     gap: 100px 20px;
-    margin: 120px auto;
 }
 
 .book-card {
     max-width: 450px;
     min-width: 350px;
+    min-height: 485px;
 }
 
 .book-card-bordered {
@@ -140,9 +140,7 @@ p {
 	background-color: var(--primary-color);
     border: 1px solid var(--secondary-color);
     min-height: 435px;
-    max-width: 450px;
     padding: 40px;
-    margin: 0 auto;
 }
 
 .book-number {
@@ -151,7 +149,6 @@ p {
 	right: 0px;
 	width: 40px;
 	height: 40px;
-	background-color: var(--primary-color);
 	color: var(--secondary-color);
     font-family: 'Montserrat', sans-serif;
 	font-size: 24px;
@@ -169,15 +166,14 @@ p {
 .button-details {
 	position: relative;
     width: 100%;
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
+    height: 20px;
     cursor: pointer;
 }
 
 .button-details:hover {
 	position: relative;
     width: 100%;
-    background-color: var(--secondary-color);
+    background-color: rgba(74, 55, 160, 1.000);
     color: var(--primary-color);
     cursor: pointer;
 }
@@ -185,6 +181,7 @@ p {
 .button-text {
     position: absolute;
     left: 0;
+    height: 20px;
 	font-size: 14px;
 	line-height: 20px;
     text-align: left;
@@ -195,5 +192,6 @@ p {
 .button-icon {
 	position: absolute;
     right: 0;
+    height: 20px;
     color: var(--secondary-color);
 }
