--- a/docs/style.css
+++ b/docs/style.css
@@ -46,7 +46,6 @@ select {
 
 body {
     font-family: 'Montserrat', sans-serif;
-    /* font-family: 'Overpass', sans-serif; */
     color: var(--secondary-color);
 	background: var(--primary-color);
 }
@@ -68,7 +67,6 @@ h3 {
 	line-height: 44px;
 	font-weight: 700;
     color: var(--secondary-color);
-    font-family: 'Montserrat', sans-serif;
     padding-bottom: 20px;
 }
 
@@ -78,7 +76,6 @@ h4 {
 	font-weight: 400;
     letter-spacing: 0.2em;
     color: var(--secondary-color);
-    font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     padding-bottom: 10px;
 }
@@ -102,6 +99,7 @@ p {
   'opsz' 48;
   font-size: 24px;
   color: var(--primary-color);
+  cursor: pointer;
 }
 
 .header {
@@ -150,7 +148,6 @@ p {
 	width: 40px;
 	height: 40px;
 	color: var(--secondary-color);
-    font-family: 'Montserrat', sans-serif;
 	font-size: 24px;
 	line-height: 40px;
 	text-align: center;
@@ -170,14 +167,6 @@ p {
     cursor: pointer;
 }
 
-.button-details:hover {
-	position: relative;
-    width: 100%;
-    background-color: rgba(74, 55, 160, 1.000);
-    color: var(--primary-color);
-    cursor: pointer;
-}
-
 .button-text {
     position: absolute;
     left: 0;
@@ -187,6 +176,18 @@ p {
     text-align: left;
     color: var(--secondary-color);
     background-color: var(--primary-color);
+}
+
+.button-text:hover {
+    position: absolute;
+    left: 0;
+    height: 20px;
+	font-size: 14px;
+	line-height: 20px;
+    text-align: left;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    width: 100%;
 }
 
 .button-icon {
