--- a/docs/style.css
+++ b/docs/style.css
@@ -55,6 +55,7 @@ body {
 
 h2 {
 	font-size: 12px;
+    line-height: 40px;
 	font-weight: 400;
     letter-spacing: 0.2em;
     text-transform: uppercase;
@@ -113,11 +114,13 @@ p {
 	padding: 0 10px;
 	z-index: 9;
 	background-color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 .main {
 	max-width: 1280px;
 	margin: 120px auto;
+    background-color: var(--primary-color);
 }
 
 .section-books {
@@ -155,36 +158,30 @@ p {
 }
 
 .book-info {
-	width: calc(100% - 80px);
 	position: absolute;
+	width: calc(100% - 80px);
 	top: 40px;
 }
 
 .button-details {
 	position: relative;
     width: 100%;
-    height: 20px;
+    height: 18px;
     cursor: pointer;
 }
 
 .button-text {
     position: absolute;
     left: 0;
-    height: 20px;
+    height: 18px;
 	font-size: 14px;
-	line-height: 20px;
+	line-height: 18px;
     text-align: left;
     color: var(--secondary-color);
     background-color: var(--primary-color);
 }
 
 .button-text:hover {
-    position: absolute;
-    left: 0;
-    height: 20px;
-	font-size: 14px;
-	line-height: 20px;
-    text-align: left;
     color: var(--primary-color);
     background-color: var(--secondary-color);
     width: 100%;
@@ -193,6 +190,7 @@ p {
 .button-icon {
 	position: absolute;
     right: 0;
-    height: 20px;
+    font-size: 18px;
+    height: 18px;
     color: var(--secondary-color);
 }
